[package]
name = "ubi"
version = "2.0.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aar = {path = "../aar"}
clap = { version = "3.1.2", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["parking_lot", "env-filter"]}
thiserror = "1.0"
parking_lot = "0.12.0"
regex = "1.5.5" # as of 2022-03-14 tracing-subscriber 0.3 depends on regex 1.5.4, which is vulnerable to a DOS (https://rustsec.org/advisories/RUSTSEC-2022-0013)
miette = { version = "4.4.0", features = ["fancy"] }

[dev-dependencies.cargo-husky]
version = "1"
features = ["precommit-hook", "run-cargo-test", "run-cargo-fmt"]
